styling to fix collapsing-divs problem on left-side of footer/sidebar.

--- a/inc/jzdrop/theme/css/front.css
+++ b/inc/jzdrop/theme/css/front.css
@@ -124,6 +124,3 @@ body {
   font-style: italic;
 }
 
-.elsewhere {
-  float: left;
-}
